fixed overflow issue

--- a/css/capitolhill.scss
+++ b/css/capitolhill.scss
@@ -1400,3 +1400,7 @@ img {
         height: 100px;
     }
 }
+
+body{
+    overflow-x: hidden;
+}
